# ValorantComplimentBot

./: .gitignore  LICENSE  README.md  auto_compliment.py  open_soundboard.py  play_through_microphone.py  pyproject.toml  requirements.txt
audio/: audio_controls.py  auto_compliment.py  commands.py
common/: constants.py
gui/: auto_compliments_info_ui.py  soundboard_ui.py
vision/: grabber.py  image_grabber.py
