[tool.poetry]
name = "ValorantCV"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.8"
pygame = "^2.1.2"
scikit-learn = "^1.0.2"
keyboard = "^0.13.5"
pyscreenshot = "^3.0"
opencv-python = "^4.5.5"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
